--- a/index.html
+++ b/index.html
@@ -4,34 +4,37 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <!-- <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css" integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz" crossorigin="anonymous"> -->
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css" integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
-    <title>Welcome</title>
+    <title>; )</title>
 </head>
 <body>
     <div class="grid-2">
         <div class="section-1">
-                <img src="./img/Mia.jpeg" width="250"/></i>
+                <img src="./img/cat.jpeg" width="250"/></i>
             <h2>Chong He</h2>
-            <p>San Diego</p>
+            <p>Incoming CS PhD at SFU</p>
             <a href="#"><i class="fab fa-twitter"></i></a>
             <a href="#"><i class="fab fa-linkedin"></i></a>
             <a href="#"><i class="fab fa-github"></i></a>
         </div>
         <div class="section-2">
             <h2>About</h2>
-            <p>I am currently a MS student at University of California, San Diego majoring in mechanical and aerospace engineering. I received my BEng degree at Tongji University, China majoring in mechanical design, manufacturing and its automation. </p>
-            <h2>Skills</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis in maiores autem quidem.</p>
+            <p>I am currently a MS student at University of California, San Diego majoring in mechanical and aerospace engineering.<br>
+            I received my B.Eng degree at Tongji University, China majoring in mechanical design, manufacturing and its automation. </p>
 
+            <h2>Skills</h2>
+            <p>Good Matlab and Python coding skills. Can do C/C++. Know a little about Java.<br>
+               Very familliar with AutoCAD and SolidWorks.</p>
             <h2>Publication</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis in maiores autem quidem obcaecati excepturi! Cupiditate eaque itaque magni voluptatibus neque nobis est dolor? Atque sunt minus ipsa asperiores. At.</p>
+            <p>[1]Xiaojie Ai, Anzhu Gao, Member, IEEE, Zecai Lin, <strong>Chong He,</strong> Weidong Chen, Member, IEEE <k href="https://ieeexplore.ieee.org/stamp/stamp.jsp?arnumber=9385942&casa_token=uvvEy3mAeaoAAAAA:Uj66kU9IecP0gXdhLtB3lHEDgfpzEUeqPUbyCYQJelyMtMsy0BVrJyOG6KT974GBRW4rCjnbgg&tag=1">“A Multi-Contact-Aided Continuum Manipulator With Anisotropic Shapes”</k>, IEEE Robotics and Automation Letters, July 2021</p>
+
             <h2>Projects</h2>
-            <a href="#">Project 1</a>
-            <a href="#">Project 2</a>
-            <a href="#">Project 3</a>
-            <a href="#">Project 4</a>
-            <a href="#">Project 5</a>
+            <g href="#">Project 1</g>
+            <g href="#">Project 2</g>
+            <g href="#">Project 3</g>
+            <g href="#">Project 4</g>
+            <g href="#">Project 5</g>
             <h2>Contact</h2>
             <p>c5he@ucsd.edu</p>
         </div>
