--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
             <h2>Chong He</h2>
             <p>Incoming CS PhD at SFU</p>
             <a href="#"><i class="fab fa-twitter"></i></a>
-            <a href="#"><i class="fab fa-linkedin"></i></a>
-            <a href="#"><i class="fab fa-github"></i></a>
+            <a href="https://www.linkedin.com/in/%E7%BF%80-%E4%BD%95-172a0519a/"><i class="fab fa-linkedin"></i></a>
+            <a href="https://github.com/ChongChongbst"><i class="fab fa-github"></i></a>
         </div>
         <div class="section-2">
             <h2>About</h2>
