--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <div class="grid-2">
         <div class="section-1">
-                <img src="./img/cat.jpeg" width="200"/></i>
+            <img src="./img/cat.jpeg" width="200"/></i>
             <h2>何翀 (Chong He)</h2>
             <a href="#"><i class="fab fa-twitter"></i></a>
             <a href="https://www.linkedin.com/in/%E7%BF%80-%E4%BD%95-172a0519a/" target="_blank" rel="noopener noreferrer"><i class="fab fa-linkedin"></i></a>
@@ -66,7 +66,7 @@
 
             <g href="#" class="collapsible">Spline Reconstruction with 2 Cameras</g>
             <div class="content">
-                <p>From this project, </p>
+                <p>I worked at Shanghai Jiaotong University as a Research Assistant from 2020-2021 </p>
             </div>
 
             <g href="#" class="collapsible">Teleoperation for Catheter Control</g>
@@ -75,7 +75,8 @@
             </div>
 
             <h2 id="contact">Contact</h2>
-            <p>candice123hc@gmail.com</p>
+            <a href = "mailto: chong_he@sfu.ca" style="color:#292857; padding-bottom:100px;">E-mail: chong_he@sfu.ca</a>
+           
         </div>
 
 
