change title of one project

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
             <h2 id="research">Research</h2>
 
-            <g href="#" class="collapsible">Refine HJ Decomposition With Admissible Control</g>
+            <g href="#" class="collapsible">Hamilton-Jacobi Reachability Decomposition with Admissible Control</g>
             <div class="content">
                 <p>Lorem ipsum...</p>
             </div>
