--- a/index.html
+++ b/index.html
@@ -33,7 +33,8 @@
             <p>
             I am a Phd Candidate majoring in Computing Science at Simon Fraser University. <br>
             Check out our lab website: <a href="https://sfumars.com/" target="_blank" rel="noopener noreferrer">Mars Lab.</a> <br>
-            Previously, I pursued my master degree at University of California, San Diego with a major of Mechanical and Aerospace Engineering in <a href="http://sylviaherbert.com/" target="_blank" rel="noopener noreferrer">The Safe Autonomous Systems Lab</a> .<br>
+            I obtained my master degree at University of California, San Diego with a major of Mechanical and Aerospace Engineering in <a href="http://sylviaherbert.com/" target="_blank" rel="noopener noreferrer">The Safe Autonomous Systems Lab</a> .<br>
+            Previously, I worked as a research assistant in <a href="https://imr.sjtu.edu.cn/" target="_blank" rel="noopener noreferrer">the Institute of Medical Robotics</a> at Shanghai Jiaotong University.<br>
             I received my B.Eng degree at Tongji University, China majoring in mechanical design, manufacturing and its automation.<br>
             My Research Interest lies in Reachability, Control Theory and Medical Robots.
             </p>
