--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css" integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz" crossorigin="anonymous">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
+    <link rel='stylesheet' href="css/bootstrap.css">
     <title>; )</title>
 </head>
 <body>
@@ -32,8 +33,8 @@
             <h2 id="about">About</h2>
             <p>
             I am a Phd Candidate majoring in Computing Science at Simon Fraser University. <br>
-            Check out our lab website: <a href="https://sfumars.com/" target="_blank" rel="noopener noreferrer">Mars Lab.</a> <br>
-            I obtained my master degree at University of California, San Diego with a major of Mechanical and Aerospace Engineering in <a href="http://sylviaherbert.com/" target="_blank" rel="noopener noreferrer">The Safe Autonomous Systems Lab</a> .<br>
+            Check out our lab website: <a href="https://sfumars.com/" target="_blank">Mars Lab.</a> <br>
+            I obtained my master degree at University of California, San Diego with a major of Mechanical and Aerospace Engineering in <a href="http://sylviaherbert.com/" target="_blank">The Safe Autonomous Systems Lab</a> .<br>
             Previously, I worked as a research assistant in <a href="https://imr.sjtu.edu.cn/" target="_blank" rel="noopener noreferrer">the Institute of Medical Robotics</a> at Shanghai Jiaotong University.<br>
             I received my B.Eng degree at Tongji University, China majoring in mechanical design, manufacturing and its automation.<br>
             My Research Interest lies in Reachability, Control Theory and Medical Robots.
@@ -63,7 +64,7 @@
                 With the image sequence, the 3D shape information can be optimized to the true value.
                 </p>
                 <img src="./img/imagesequence.gif" width=95%> 
-                <p> This projected is coded with pytorch, and the code can be found at <a href="https://github.com/ChongChongbst/ARCLab-CatheterControl/tree/main" target="_blank" rel="noopener noreferrer" style="color: #292857">CatheterControl</a> .</p>       
+                <p> This projected is coded with pytorch, and the code can be found at <a href="https://github.com/ChongChongbst/ARCLab-CatheterControl/tree/main" target="_blank" style="color: #292857">CatheterControl</a> .</p>       
             </div>
 
             <g href="#" class="collapsible">A Multi-Contact-Aided Continuum Manipulator</g>
@@ -97,6 +98,7 @@
 
 
     </div>
+
 
 <script>
 var coll = document.getElementsByClassName("collapsible");
