add new project

--- a/index.html
+++ b/index.html
@@ -45,17 +45,22 @@
                 <p>Matlab, Python, C/C++, and Java.<br>
                 Familliar with mechanical design tools such as AutoCAD and SolidWorks.<br>
                 Love skiing and playing video games at leisure time.
-            </p>
+                </p>
                 
 
                 <h2 id="research">Research</h2>
 
-                <g href="#" class="collapsible">Hamilton-Jacobi Reachability Decomposition with Admissible Control</g>
+                <g class="collapsible">Hamilton-Jacobi Reachability Decomposition with Admissible Control</g>
                 <div class="content">
-                    <p>Lorem ipsum...</p>
+                    <p>
+                    Hamilton-Jacobi reachability analysis is a useful tool for generating reachable sets and corresponding optimal control policies, but its use in high-dimensional systems is hindered by the "curse of dimensionality." Self-contained subsystem decomposition is a proposed solution, but it can produce conservative or incorrect results due to the "leaking corner issue." This issue arises from the inexact decomposition of the target set and inconsistencies across the computed control policies for each coupled subsystem.</br>
+                    In this work, we define and resolve this issue by introducing the notion of an admissible control set that enforces consistent control actions across the coupled subsystems. Our method efficiently computes exact reachable sets and the corresponding optimal control policy for self-contained subsystems with a decomposable goal (or failure) set. We also provide conservative under-approximations for goal (or failure) sets with inexact decomposition. In this conservative case, a local update method in the full dimensional space can be applied to recover exact results. 
+                    </p>
+                    <img src="./img/HJwACS/exactInexact.png" width=50%> 
+                    <img src="./img/HJwACS/ReachSureUnsure.png" width=43%> 
                 </div>
 
-                <g href="#" class="collapsible">3D Catheter Reconstruction from Image Sequence</g>
+                <g class="collapsible">3D Catheter Reconstruction from Image Sequence</g>
                 <div class="content">
                     <p>
                     How to find the actual 3D shape of a catheter with a low-resolution endoscopic camera?</br>
@@ -67,7 +72,7 @@
                     <p> This projected is coded with pytorch, and the code can be found at <a href="https://github.com/ChongChongbst/ARCLab-CatheterControl/tree/main" target="_blank" style="color: #292857">CatheterControl</a> .</p>       
                 </div>
 
-                <g href="#" class="collapsible">A Multi-Contact-Aided Continuum Manipulator</g>
+                <g class="collapsible">A Multi-Contact-Aided Continuum Manipulator</g>
                 <div class="content">
                     <p>Continuum manipulator has the advantage of being able to get formed into different shapes when its structure is carefully designed. Both simulation result and real-world result are crucial in verifying the kinematic model of its special shape. </p>
                     <p>The following real-world experiment data is collected from stereo-camera and key point detection techniques.</p>
@@ -78,7 +83,7 @@
                     </p>
                 </div>
 
-                <g href="#" class="collapsible">Teleoperation for Catheter Control</g>
+                <g class="collapsible">Teleoperation for Catheter Control</g>
                 <div class="content">
                     <p>The multi-shape advantage of continuum manipulator is crucial in minimum invasive surgery.</p>
                     <p>In hope for easier usage when implementing surgeries, this project is initiated. </p>
