--- a/index.html
+++ b/index.html
@@ -58,6 +58,8 @@
                     </p>
                     <img src="./img/HJwACS/exactInexact.png" width=50%> 
                     <img src="./img/HJwACS/ReachSureUnsure.png" width=43%> 
+                    [1] <strong>Chong He*</strong>, Zheng Gong*, Mo Chen, Sylvia Herbert,t <a href="https://ieeexplore.ieee.org/document/10365682" target="_blank" style="color: #292857">"Efficient and Guaranteed Hamilton-Jacobi Reachability via Self-Contained Subsystem Decomposition and Admissible Control Sets"</a>, IEEE Control Systems Letter, 2024
+                    </p>
                 </div>
 
                 <g class="collapsible">3D Catheter Reconstruction from Image Sequence</g>
