add publication and code

--- a/index.html
+++ b/index.html
@@ -58,8 +58,10 @@
                     </p>
                     <img src="./img/HJwACS/exactInexact.png" width=50%> 
                     <img src="./img/HJwACS/ReachSureUnsure.png" width=43%> 
-                    [1] <strong>Chong He*</strong>, Zheng Gong*, Mo Chen, Sylvia Herbert,t <a href="https://ieeexplore.ieee.org/document/10365682" target="_blank" style="color: #292857">"Efficient and Guaranteed Hamilton-Jacobi Reachability via Self-Contained Subsystem Decomposition and Admissible Control Sets"</a>, IEEE Control Systems Letter, 2024
+                    <p>
+                    [1] <strong>Chong He*</strong>, Zheng Gong*, Mo Chen, Sylvia Herbert, <a href="https://ieeexplore.ieee.org/document/10365682" target="_blank" style="color: #292857">"Efficient and Guaranteed Hamilton-Jacobi Reachability via Self-Contained Subsystem Decomposition and Admissible Control Sets"</a>, IEEE Control Systems Letter, 2023
                     </p>
+                    <p> This projected is coded in Matlab, and the code can be found at <a href="https://github.com/ChongChongbst/Admissible-Control-Reconstruction" target="_blank" style="color: #292857">Admissible-Control-Reconstruction</a> .</p>
                 </div>
 
                 <g class="collapsible">3D Catheter Reconstruction from Image Sequence</g>
