--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                 Love skiing and playing video games at leisure time.
                 </p>
 
-                <h2 id="publication">Publication</h2>
+                <h2 id="publication">Publications</h2>
                 <p>
                 - Frank J. Jiang, Kaj Munhoz Arfvidsson, <strong>Chong He</strong>, Mo Chen, Karl H. Johansson, <a href="https://arxiv.org/abs/2404.08334" target="_blank" style="color: #292857">"Guaranteed Completion of Complex Tasks via Temporal Logic Trees and Hamilton-Jacobi Reachability"</a>, IEEE Conference on Decision and Control, 2024 (submitted)
                 </p>
