grammer mistake corrected

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <div class="section-2">
                 <h2 id="about">About</h2>
                 <p>
-                I am a Phd student majoring in Computing Science at Simon Fraser University. <br>
+                I am a Phd student specialized in Computing Science at Simon Fraser University. <br>
                 Check out our lab website: <a href="https://sfumars.com/" target="_blank">Mars Lab.</a> <br>
                 I obtained my master degree at University of California, San Diego with a major of Mechanical and Aerospace Engineering in <a href="http://sylviaherbert.com/" target="_blank">The Safe Autonomous Systems Lab</a> .<br>
                 Previously, I worked as a research assistant in <a href="https://imr.sjtu.edu.cn/" target="_blank" rel="noopener noreferrer">the Institute of Medical Robotics</a> at Shanghai Jiaotong University.<br>
