added new publication

--- a/index.html
+++ b/index.html
@@ -51,7 +51,11 @@
 
                 <h2 id="publication">Publications</h2>
                 <p>
-                - Frank J. Jiang, Kaj Munhoz Arfvidsson, <strong>Chong He</strong>, Mo Chen, Karl H. Johansson, <a href="https://arxiv.org/abs/2404.08334" target="_blank" style="color: #292857">"Guaranteed Completion of Complex Tasks via Temporal Logic Trees and Hamilton-Jacobi Reachability"</a>, IEEE Conference on Decision and Control, 2024 (submitted)
+                - <strong>Chong He</strong>, Mugilan Mariappan, Keval Vora, Mo Chen <a href="https://arxiv.org/pdf/2505.10020" target="_blank" style="color: #292857">"Threshold Strategy for Leaking Corner-Free Hamilton-Jacobi Reachability
+                    with Decomposed Computations"</a>, IEEE Conference on Decision and Control, 2025 (submitted)
+                </p>
+                <p>
+                - Frank J. Jiang, Kaj Munhoz Arfvidsson, <strong>Chong He</strong>, Mo Chen, Karl H. Johansson, <a href="https://arxiv.org/abs/2404.08334" target="_blank" style="color: #292857">"Guaranteed Completion of Complex Tasks via Temporal Logic Trees and Hamilton-Jacobi Reachability"</a>, IEEE Conference on Decision and Control, 2024
                 </p>
                 <p>
                 - <strong>Chong He*</strong>, Zheng Gong*, Mo Chen, Sylvia Herbert, <a href="https://ieeexplore.ieee.org/document/10365682" target="_blank" style="color: #292857">"Efficient and Guaranteed Hamilton-Jacobi Reachability via Self-Contained Subsystem Decomposition and Admissible Control Sets"</a>, IEEE Control Systems Letter, 2023 
