--- a/index.html
+++ b/index.html
@@ -72,6 +72,19 @@
                 
 
                 <h2 id="research">Research</h2>
+                <g class="collapsible">Leaking Corner Issue</g>
+                <div class="content">
+                    <p>
+                    By calling the issue ``leaking corner issue'', we mean that it is observed that the incorrectness happens at the corner. </br>
+                    In this work, we have the theoretical proof that it only exists in the corner. </br>
+                    Besides, a local updating procedure is proposed to recover the exact reachable set, which guarantees fast computation and correct result. </br>
+                    </p>
+                    <img src="./img/threshold/proof.png" width=42%> 
+                    <img src="./img/threshold/localprocess.png" width=57%> 
+                    <p>
+                    [1] <strong>Chong He</strong>, Mugilan Mariappan, Keval Vora, Mo Chen <a href="https://arxiv.org/pdf/2505.10020" target="_blank" style="color: #292857">"Threshold Strategy for Leaking Corner-Free Hamilton-Jacobi Reachability with Decomposed Computations"</a>, IEEE Conference on Decision and Control, 2025 (submitted)
+                    </p>
+                </div>
 
                 <g class="collapsible">Hamilton-Jacobi Reachability Decomposition with Admissible Control</g>
                 <div class="content">
@@ -82,7 +95,7 @@
                     <img src="./img/HJwACS/exactInexact.png" width=50%> 
                     <img src="./img/HJwACS/ReachSureUnsure.png" width=43%> 
                     <p>
-                    [1] <strong>Chong He*</strong>, Zheng Gong*, Mo Chen, Sylvia Herbert, <a href="https://ieeexplore.ieee.org/document/10365682" target="_blank" style="color: #292857">"Efficient and Guaranteed Hamilton-Jacobi Reachability via Self-Contained Subsystem Decomposition and Admissible Control Sets"</a>, IEEE Control Systems Letter, 2023
+                    [2] <strong>Chong He*</strong>, Zheng Gong*, Mo Chen, Sylvia Herbert, <a href="https://ieeexplore.ieee.org/document/10365682" target="_blank" style="color: #292857">"Efficient and Guaranteed Hamilton-Jacobi Reachability via Self-Contained Subsystem Decomposition and Admissible Control Sets"</a>, IEEE Control Systems Letter, 2023
                     </p>
                     <p> This projected is coded in Matlab, and the code can be found at <a href="https://github.com/ChongChongbst/Admissible-Control-Reconstruction" target="_blank" style="color: #292857">Admissible-Control-Reconstruction</a> .</p>
                 </div>
