cdc papaer is acceptted

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                 <h2 id="publication">Publications</h2>
                 <p>
                 - <strong>Chong He</strong>, Mugilan Mariappan, Keval Vora, Mo Chen <a href="https://arxiv.org/pdf/2505.10020" target="_blank" style="color: #292857">"Threshold Strategy for Leaking Corner-Free Hamilton-Jacobi Reachability
-                    with Decomposed Computations"</a>, IEEE Conference on Decision and Control, 2025 (submitted)
+                    with Decomposed Computations"</a>, IEEE Conference on Decision and Control, 2025
                 </p>
                 <p>
                 - Frank J. Jiang, Kaj Munhoz Arfvidsson, <strong>Chong He</strong>, Mo Chen, Karl H. Johansson, <a href="https://arxiv.org/abs/2404.08334" target="_blank" style="color: #292857">"Guaranteed Completion of Complex Tasks via Temporal Logic Trees and Hamilton-Jacobi Reachability"</a>, IEEE Conference on Decision and Control, 2024
@@ -82,7 +82,7 @@
                     <img src="./img/threshold/proof.png" width=42%> 
                     <img src="./img/threshold/localprocess.png" width=57%> 
                     <p>
-                    [1] <strong>Chong He</strong>, Mugilan Mariappan, Keval Vora, Mo Chen <a href="https://arxiv.org/pdf/2505.10020" target="_blank" style="color: #292857">"Threshold Strategy for Leaking Corner-Free Hamilton-Jacobi Reachability with Decomposed Computations"</a>, IEEE Conference on Decision and Control, 2025 (submitted)
+                    [1] <strong>Chong He</strong>, Mugilan Mariappan, Keval Vora, Mo Chen <a href="https://arxiv.org/pdf/2505.10020" target="_blank" style="color: #292857">"Threshold Strategy for Leaking Corner-Free Hamilton-Jacobi Reachability with Decomposed Computations"</a>, IEEE Conference on Decision and Control, 2025
                     </p>
                 </div>
 
