--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                     </p>
                     <p> This projected is coded in Matlab, and the code can be found at <a href="https://github.com/ChongChongbst/Admissible-Control-Reconstruction" target="_blank" style="color: #292857">Admissible-Control-Reconstruction</a> .</p>
                     <p>
-                    2. <a class="label label-info" href="./projects/threshold-strategy/index.html" target="_blank" style="color: #292857"> Threshold Strategy (Check out the project website)</a>:</p>
+                    2. <a class="label label-info" href="./projects/threshold-strategy/index.html" target="_blank" rel="noopener noreferrer" style="color: #292857"> Threshold Strategy (Check out the project website)</a>:</p>
                     By calling the issue ``leaking corner issue'', we mean that it is observed that the incorrectness happens at the corner. </br>
                     In this work, we have the theoretical proof that it only exists in the corner. </br>
                     Besides, a local updating procedure is proposed to recover the exact reachable set, which guarantees fast computation and correct result. </br>
