--- a/projects/threshold-strategy/index.html
+++ b/projects/threshold-strategy/index.html
@@ -88,6 +88,11 @@
           <!-- <img src="resrc/.png" alt="deep_tsf.png"  class="text-center" style="width: 90%; max-width: 1100px"> -->
           <p>We proved that "leaking corner issue" will only happen at the places
              where the value difference between sub-value functions is smaller than certain threshold.</p>
+            <p>Theorem 1: We can find the set of leaking corners L(t)
+            by comparing the (full-dimensional) sub-value functions.</p>
+            <p>L(t) = {z : |V1(z, t) − V2(z, t)| < ∆}.</p>
+            <p>The value of ∆ is</p>
+            <img src="resrc/eq-theory.png" alt="dti.png"  class="text-center" style="width: 30%; max-width: 500px">
           <p>For detailed illustration, please refer to the paper or presentation.  </p>
           
       </div>
