paper open source?

--- a/projects/threshold-strategy/index.html
+++ b/projects/threshold-strategy/index.html
@@ -48,7 +48,7 @@
 <div class="container" style="text-align:center; padding:1rem">
   <h3 style="padding-top:0.2rem; padding-bottom:2em;">
     <div style="text-align:center;">
-      <a class="label label-info" target="_blank" href="https://arxiv.org/pdf/2505.10020">Paper</a>
+      <a class="label label-info" target="_blank" href="resrc/threshold-strategy.pdf">Paper</a>
       <a class="label label-info" target="_blank" href="https://github.com/SFU-MARS/HJ_local_update">Code</a>
       <a class="label label-info" target="_blank" href="resrc/Threshold strategy -2025CDC.pdf">Presentation</a>
       <a class="label label-info" target="_blank" href="resrc/poster-threshold-strategy.pdf">Poster</a>
