--- a/projects/threshold-strategy/index.html
+++ b/projects/threshold-strategy/index.html
@@ -90,9 +90,9 @@
              where the value difference between sub-value functions is smaller than certain threshold.</p>
             <p>Theorem 1: We can find the set of leaking corners L(t)
             by comparing the (full-dimensional) sub-value functions.</p>
-            <p>L(t) = {z : |V1(z, t) − V2(z, t)| < ∆}.</p>
+            <img src="resrc/eq-theory-1.png" alt="dti.png"  class="text-center" style="width: 30%; max-width: 500px">
             <p>The value of ∆ is</p>
-            <img src="resrc/eq-theory.png" alt="dti.png"  class="text-center" style="width: 30%; max-width: 500px">
+            <img src="resrc/eq-theory-2.png" alt="dti.png"  class="text-center" style="width: 40%; max-width: 500px">
           <p>For detailed illustration, please refer to the paper or presentation.  </p>
           
       </div>
