update website to have the link to personal website

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
         <div class="container">
             <div class="section-1">
-                <img src="./img/cat.jpeg" width="200"/></i>
+                <img src="./img/ChongHe.jpeg" width="200"/></i>
                 <h2>何翀 (Chong He)</h2>
                 <a href="#"><i class="fab fa-twitter"></i></a>
                 <a href="https://www.linkedin.com/in/%E7%BF%80-%E4%BD%95-172a0519a/" target="_blank" rel="noopener noreferrer"><i class="fab fa-linkedin"></i></a>
