--- a/projects/threshold-strategy/index.html
+++ b/projects/threshold-strategy/index.html
@@ -28,7 +28,7 @@
     <div class="row" style="display:flex; justify-content:center; text-align:center;">
         <div class="col-xs-12 col-md-6">
             <h4>
-                <nobr>Chong He</nobr> &emsp;
+                <nobr><a href="https://chongspace123.github.io/" target="_blank">Chong He</a></nobr> &emsp;
                 <nobr>Mugilan Mariappan</nobr> &emsp;
                 <nobr>Keval Vora</nobr> &emsp;
                 <nobr>Mo Chen</nobr>
